--- a/omod/src/main/webapp/resources/htmlforms/financial-assessment.html
+++ b/omod/src/main/webapp/resources/htmlforms/financial-assessment.html
@@ -19,12 +19,48 @@ formDisplayStyle="Simple"
 		jQuery(document).ready(function(){
 			toggleContainers();
 
-			jQuery(function() {
-				getField('LFHC:1319.value').change(function() {
-					console.log(getValue("LFHC:1319.value"));		
-				});
-			});
+			var input = {};
 
+			$(".lcs").change(function consolidateLCSInputs () { 
+				var obsField = 0;
+				var questionConceptMapping;
+				var answerConceptId;
+
+				$(this).find("span.obs-field").each(function (index, currentSpan) {
+
+					obsField = obsField + 1;
+
+					questionConceptMapping = ($(currentSpan).attr("id"));
+
+					answerConceptId = getValue(questionConceptMapping + ".value");
+
+					//console.log("question: " + questionConceptMapping);
+					//console.log("answer: " + answerConceptId);
+				});
+
+				if (obsField == 0) {
+					console.error("The observation has no 'span.obs-field' element.\n This is most likely due to the fact that no 'id' is set to the '&lt;obs>' tag of your HTML Form Entry form.\n Hint: You must set the 'id' to be the concept mapping of the obs itself");
+				}
+				if (obsField > 1) {
+					console.error("There is more than one 'span.obs-field' element in your 'p.lcs' element.\n This is most likely due to the fact that there is more than one '&lt;obs>' tag in a single 'p' in your HTML Form Entry form.\n Hint: it is not supported to add more than one 'obs' per 'p' yet");
+				} else {
+					input[questionConceptMapping] = answerConceptId;
+					if (answerConceptId == "") { delete input[questionConceptMapping]};
+					//console.log(input);
+
+					score = calculateLCS(input, lcsDefinition);
+					console.log(score);
+					if (score.value == null) {
+						console.error("Living Conditions Score not computed");
+					}
+					if (score.error == "1"  &amp;&amp; score.value == null) {
+						console.error("Unable to find score for answer "+ answerConceptId + " of question "+ questionConceptMapping +" in lcsDefinition.json file");
+					}
+					if (score.error == "2" &amp;&amp; score.value == null) {
+						console.error("Unable to find question " + questionConceptMapping + " in lcsDefinition.json file");
+					}
+				}
+			});
 
 		});
 
@@ -264,7 +300,7 @@ formDisplayStyle="Simple"
 			<uimessage code="lfhcforms.financial-assessment.legend.hef" />
 		</h3>
 		<p>
-			<obs id="LFHC:1319" conceptId="LFHC:1319" />
+			<obs conceptId="LFHC:1319" />
 		</p>
 	</fieldset>	
 
@@ -277,36 +313,36 @@ formDisplayStyle="Simple"
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.children" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1320" />
+		<p class="lcs">
+			<obs id="LFHC:1320" conceptId="LFHC:1320" />
 		</p>
 
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.adults" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1321" />
+		<p class="lcs">
+			<obs id="LFHC:1321"  conceptId="LFHC:1321" />
 		</p>
 
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.number-of-persons" />
 		</h3>
-		<p>
-			<obs conceptId="CIEL:5611" />
+		<p class="lcs">
+			<obs id="CIEL:5611" conceptId="CIEL:5611" />
 		</p>
 
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.gender-of-head" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1322" />
+		<p class="lcs">
+			<obs id="LFHC:1322" conceptId="LFHC:1322" />
 		</p>
 
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.literacy-level-of-head" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1327" />
+		<p class="lcs">
+			<obs id="LFHC:1327" conceptId="LFHC:1327" />
 		</p>
 	</fieldset>	
 
@@ -320,56 +356,56 @@ formDisplayStyle="Simple"
 
 			<uimessage code="lfhcforms.financial-assessment.legend.rapid-assessment" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1330" />
+		<p class="lcs">
+			<obs id="LFHC:1330" conceptId="LFHC:1330" />
 		</p>
 		
 		<h3>
 
 			<uimessage code="lfhcforms.financial-assessment.legend.roof" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1336" />
+		<p class="lcs">
+			<obs id="LFHC:1336" conceptId="LFHC:1336" />
 		</p>
 		
 		<h3>
 
 			<uimessage code="lfhcforms.financial-assessment.legend.wall" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1337" />
+		<p class="lcs">
+			<obs id="LFHC:1337" conceptId="LFHC:1337" />
 		</p>
 		
 		<h3>
 
 			<uimessage code="lfhcforms.financial-assessment.legend.size" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1341" showUnits="true" />
+		<p class="lcs">
+			<obs id="LFHC:1341" conceptId="LFHC:1341" showUnits="true" />
 		</p>
 		
 		<h3>
 
 			<uimessage code="lfhcforms.financial-assessment.legend.floor" />
 		</h3>
-		<p>
-			<obs conceptId="CIEL:159387" />
+		<p class="lcs">
+			<obs id="CIEL:159387" conceptId="CIEL:159387" />
 		</p>
 		
 		<h3>
 
 			<uimessage code="lfhcforms.financial-assessment.legend.toilet" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1344" />
+		<p class="lcs">
+			<obs id="LFHC:1344" conceptId="LFHC:1344" />
 		</p>
 		
 		<h3>
 
 			<uimessage code="lfhcforms.financial-assessment.legend.energy-for-cooking" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1348" />
+		<p class="lcs">
+			<obs id="LFHC:1348" conceptId="LFHC:1348" />
 		</p>
 		
 	</fieldset>	
@@ -381,8 +417,8 @@ formDisplayStyle="Simple"
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.water-source" />
 		</h3>
-		<p>
-			<obs conceptId="CIEL:1511" />
+		<p class="lcs">
+			<obs id="CIEL:1511" conceptId="CIEL:1511" />
 		</p>
 	</fieldset>	
 	<!-- Means of Transportation fieldset -->
@@ -393,8 +429,8 @@ formDisplayStyle="Simple"
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.transports" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1349" />
+		<p class="lcs">
+			<obs id="LFHC:1349" conceptId="LFHC:1349" />
 		</p>
 	</fieldset>	
 	<!-- Eletricity fund fieldset -->
@@ -405,8 +441,8 @@ formDisplayStyle="Simple"
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.electricity" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1359" />
+		<p class="lcs">
+			<obs id="LFHC:1359" conceptId="LFHC:1359" />
 		</p>
 	</fieldset>	
 	<!-- Electronics fieldset -->
@@ -417,8 +453,8 @@ formDisplayStyle="Simple"
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.electronics" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1362" />
+		<p class="lcs">
+			<obs id="LFHC:1362" conceptId="LFHC:1362" />
 		</p>
 	</fieldset>	
 
@@ -430,8 +466,8 @@ formDisplayStyle="Simple"
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.animals" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1367" />
+		<p class="lcs">
+			<obs id="LFHC:1367" conceptId="LFHC:1367" />
 		</p>
 	</fieldset>	
 	<!-- Agricultural material fieldset -->
@@ -442,8 +478,8 @@ formDisplayStyle="Simple"
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.agricultural-material" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1373" />
+		<p class="lcs">
+			<obs id="LFHC:1373" conceptId="LFHC:1373" />
 		</p>
 	</fieldset>	
 	<!-- Land fieldset -->
@@ -454,8 +490,8 @@ formDisplayStyle="Simple"
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.land" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1376" />
+		<p class="lcs">
+			<obs id="LFHC:1376" conceptId="LFHC:1376" />
 		</p>
 	</fieldset>	
 
@@ -467,8 +503,8 @@ formDisplayStyle="Simple"
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.plant-cereals" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1377" showUnits="true" />
+		<p class="lcs">
+			<obs id="LFHC:1377" conceptId="LFHC:1377" showUnits="true" />
 		</p>
 	</fieldset>	
 	<!-- Cash/Income fieldset -->
@@ -479,8 +515,8 @@ formDisplayStyle="Simple"
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.cash-income" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1378" showUnits="true" />
+		<p class="lcs">
+			<obs id="LFHC:1378" conceptId="LFHC:1378" showUnits="true" />
 		</p>
 	</fieldset>	
 	<!-- Owns a shop fieldset -->
@@ -491,8 +527,8 @@ formDisplayStyle="Simple"
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.own-shop" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1379" />
+		<p class="lcs">
+			<obs id="LFHC:1379" conceptId="LFHC:1379" />
 		</p>
 	</fieldset>	
 	<!-- Debt fieldset -->
@@ -503,8 +539,8 @@ formDisplayStyle="Simple"
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.debt" />
 		</h3>
-		<p>
-			<obs conceptId="LFHC:1380" />
+		<p class="lcs">
+			<obs id="LFHC:1380" conceptId="LFHC:1380" />
 		</p>
 	</fieldset>	
 
@@ -516,7 +552,7 @@ formDisplayStyle="Simple"
 		<h3>
 			<uimessage code="lfhcforms.financial-assessment.legend.living-conditions-score" />
 		</h3>
-		<p>
+		<p class="lcs">
 			<!-- Waiting for concept -->
 		</p>
 	</fieldset>	
