LFHCDESK-50: Changes to Outreach forms following feedback from Cheri 	modified:   api/src/main/resources/messages.properties 	modified:   omod/src/main/webapp/resources/htmlforms/homecare-pre-assessment.html 	modified:   omod/src/main/webapp/resources/htmlforms/homecare-reg.html

--- a/omod/src/main/webapp/resources/htmlforms/homecare-reg.html
+++ b/omod/src/main/webapp/resources/htmlforms/homecare-reg.html
@@ -262,7 +262,7 @@ formDisplayStyle="Simple"
 			<uimessage code="lfhcforms.homecare-regular-visit.legend.hiv-tb-until" />
 		</h3>
 		<p>
-			<obs conceptId="LFHC:1222" />
+			<obs conceptId="LFHC:1222" allowFutureDates="true" />
 		</p>
 	</fieldset>
 </section>
