LFHCDESK-50: Add some 'allowFutureDates' and remove some 'showUnits'
	modified:   financial-assessment.html
	modified:   homecare-pre-assessment.html
	modified:   homecare-reg.html

--- a/omod/src/main/webapp/resources/htmlforms/homecare-pre-assessment.html
+++ b/omod/src/main/webapp/resources/htmlforms/homecare-pre-assessment.html
@@ -627,13 +627,13 @@ formDisplayStyle="Simple"
 			<uimessage code="lfhcforms.homecare-pre-assessment.legend.primary-provider-name" />
 		</h3>
 		<p>
-			<obs conceptId="LFHC:1444" showUnits="true" />
+			<obs conceptId="LFHC:1444" />
 		</p>
 		<h3>
 			<uimessage code="lfhcforms.homecare-pre-assessment.legend.primary-provider-number" />
 		</h3>
 		<p>
-			<obs conceptId="LFHC:1445" showUnits="true" />
+			<obs conceptId="LFHC:1445" />
 		</p>
 	</fieldset>	
 
@@ -1091,10 +1091,6 @@ formDisplayStyle="Simple"
 
 </section>
 
-
-
-
 <submit/>
-
 
 </htmlform>
