--- a/omod/src/main/webapp/resources/htmlforms/homecare-reg.html
+++ b/omod/src/main/webapp/resources/htmlforms/homecare-reg.html
@@ -450,7 +450,7 @@ formDisplayStyle="Simple"
 			<uimessage code="lfhcforms.homecare-regular-visit.legend.next-visit-plan-date" />
 		</h3>
 		<p>
-			<obs conceptId="CIEL:5096" />
+			<obs conceptId="CIEL:5096" allowFutureDates="true" />
 		</p>
 	</fieldset>
 
