--- a/omod/src/main/webapp/resources/htmlforms/financial-assessment.html
+++ b/omod/src/main/webapp/resources/htmlforms/financial-assessment.html
@@ -766,7 +766,7 @@ formDisplayStyle="Simple"
 			<uimessage code="lfhcforms.financial-assessment.legend.next-review-date" />
 		</h3>
 		<p>
-			<obs conceptId="LFHC:1399" />
+			<obs conceptId="LFHC:1399"  allowFutureDates="true" />
 		</p>
 	</fieldset>	
 
