--- a/omod/src/main/webapp/resources/htmlforms/homecare-reg.html
+++ b/omod/src/main/webapp/resources/htmlforms/homecare-reg.html
@@ -253,16 +253,29 @@ formDisplayStyle="Simple"
 		</p>
 	</fieldset>
 	
-	<!-- HIV/TB drug fieldset -->
+	<!-- HIV drug fieldset -->
 	<fieldset field-separator=", ">
 		<legend>
-			<uimessage code="lfhcforms.homecare-regular-visit.legend.hiv-tb-until" />
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.hiv-until" />
 		</legend>
 		<h3>
-			<uimessage code="lfhcforms.homecare-regular-visit.legend.hiv-tb-until" />
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.hiv-until" />
 		</h3>
 		<p>
-			<obs conceptId="LFHC:1222" allowFutureDates="true" />
+			<obs conceptId="LFHC:1448" allowFutureDates="true" />
+		</p>
+	</fieldset>
+
+	<!-- TB drug fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.tb-until" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.tb-until" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1449" allowFutureDates="true" />
 		</p>
 	</fieldset>
 </section>
