LFHCDESK-50: Correct bug in jQuery setScore function 	modified:   omod/src/main/webapp/resources/htmlforms/financial-assessment.html

--- a/omod/src/main/webapp/resources/htmlforms/financial-assessment.html
+++ b/omod/src/main/webapp/resources/htmlforms/financial-assessment.html
@@ -86,12 +86,14 @@ formDisplayStyle="Simple"
 
 				if (score.complete == "false") {
 					$("#lcs-message").text(lcsNotCompleteMessage);
+					setValue("lcs-obs.vaule", "");
+					$("#lcs-value").text("");
+
 				} else {
 
 					$("#lcs-message").text("");
-
+	
 					setValue("lcs-obs.value", score.value);
-
 					$("#lcs-value").text(score.value);
 					$("#lcs-message").text(lcsVeryLowMessage);
 				}
