LFHCDESK-50: Correct type in SetValue() JS function

--- a/omod/src/main/webapp/resources/htmlforms/financial-assessment.html
+++ b/omod/src/main/webapp/resources/htmlforms/financial-assessment.html
@@ -86,7 +86,7 @@ formDisplayStyle="Simple"
 
 				if (score.isComplete == "false") {
 					$("#lcs-message").text(lcsNotCompleteMessage);
-					setValue("lcs-obs.vaule", "");
+					setValue("lcs-obs.value", "");
 					$("#lcs-value").text("");
 
 				} else {
