LFHCDESK-137: Remove unneeded style for PGCS ('display:none;') 	modified:   omod/src/main/webapp/resources/htmlforms/vitals-pews.html

--- a/omod/src/main/webapp/resources/htmlforms/vitals-pews.html
+++ b/omod/src/main/webapp/resources/htmlforms/vitals-pews.html
@@ -513,7 +513,7 @@
 				</tr>
 			</table>
 		</ifMode>
-		<span id="calculated-pgcs" style="display:none;">
+		<span id="calculated-pgcs" style="">
 			<h3>PGCS</h3>
 			<p>
 				<obs conceptId="CIEL:160347" id="pgcs"/>
