--- a/omod/src/main/webapp/resources/htmlforms/treatment.html
+++ b/omod/src/main/webapp/resources/htmlforms/treatment.html
@@ -147,99 +147,52 @@ formDisplayStyle="Simple"
 			Lab test order
 		</legend>
 		<h3>Laboratory test order</h3>
-
-		<repeat>
-			<template>
-
-				<p id="{n}-toggleContainer" templateBlockId="labTest" class="toggleContainer" style="display:none;" >
-					<obs id="{n}" conceptId="CIEL:1271" answerConceptIds="CIEL:1019,CIEL:953,CIEL:5473,CIEL:161446,LFHC:1118,CIEL:300,CIEL:302,CIEL:161445,CIEL:299,CIEL:306,CIEL:887,CIEL:160912,CIEL:160914,CIEL:857,CIEL:790,CIEL:1013,CIEL:159825,CIEL:717,CIEL:848,CIEL:1006,CIEL:1009,CIEL:1299,CIEL:1019,CIEL:5497,CIEL:856,CIEL:730,CIEL:161505,CIEL:161504,CIEL:857,CIEL:790,CIEL:1643,CIEL:159362,CIEL:1040,LFHC:1120,LFHC:1121,LFHC:1122,LFHC:1123,LFHC:1124,CIEL:45,CIEL:307,LFHC:1126,CIEL:161511,CIEL:1327,CIEL:160226,CIEL:159828,CIEL:1007,CIEL:1008,CIEL:161500,CIEL:855,CIEL:159644,CIEL:159644,LFHC:1126,CIEL:161511,CIEL:1327,CIEL:160226,CIEL:159828,CIEL:1007,CIEL:1008,CIEL:161500,CIEL:855,CIEL:159644" style="autocomplete"/>
-					<i class="addEntry icon-">&#xf055; Add</i>
-					<i class="removeEntry icon-">   &#xf056; Remove</i>
-
-				</p>
-
-			</template>
-			<render n="101"/>
-			<render n="102"/>
-			<render n="103"/>
-			<render n="104"/>
-			<render n="105"/>
-		</repeat>
-
-		<ifMode mode="VIEW" include="false">
-
-			<p>
-				<strong>
-					Please also fill in the Lab Test Order form to order your tests
-				</strong>
-			</p>
+		<p>
+			<obs id="lab-test" conceptId="LFHC:1287" >
+				<controls>
+					<when value="CIEL:1065" thenDisplay="#lab-test-yes"/>
+				</controls>
+			</obs>
+		</p>
+		<ifMode mode="view" include="false">
+			<strong id="lab-test-yes">
+				Please fill in the Lab Test Order form to order your tests
+			</strong>
 		</ifMode>
 	</fieldset>
 	<fieldset field-separator=", ">
 
 		<legend>X-ray order</legend>
 		<h3>X-ray order</h3>
-
-		<repeat>
-			<template>
-
-				<p id="{n}-toggleContainer" templateBlockId="xray" class="toggleContainer" style="display:none;" >
-					<obs id="{n}" conceptId="LFHC:1008" answerConceptIds="CIEL:12, CIEL:101, CIEL:386, CIEL:392, CIEL:309, CIEL:161266, CIEL:161267, CIEL:161269, CIEL:161270, CIEL:161272, CIEL:161295, CIEL:161298, CIEL:161299, CIEL:161302, CIEL:161303, CIEL:161305, CIEL:161306, CIEL:161307, CIEL:161317, CIEL:161318, CIEL:161319, CIEL:159600, CIEL:161265, CIEL:161301, CIEL:161320, CIEL:161322, CIEL:161321, CIEL:161324, CIEL:161325, CIEL:161327, CIEL:161329, CIEL:161328, CIEL:161330, CIEL:161332, CIEL:161333, CIEL:161334, CIEL:161337, CIEL:161338, CIEL:161341, CIEL:161342, CIEL:161343, CIEL:161344, CIEL:161345, CIEL:161347, CIEL:161348, CIEL:161349, CIEL:161350" style="autocomplete"/>
-					<i class="addEntry icon-">&#xf055; Add</i>
-					<i class="removeEntry icon-">   &#xf056; Remove</i>
-				</p>
-
-			</template>
-			<render n="401"/>
-			<render n="402"/>
-			<render n="403"/>
-			<render n="404"/>
-			<render n="405"/>
-		</repeat>
-
-		<ifMode mode="VIEW" include="false">
-			<br/>
-			<p>
-				<strong>
-					Please also fill in the X-ray Order form to order your x-rays
-				</strong>
-			</p>
+		<p>
+			<obs id="xray" conceptId="LFHC:1286" >
+				<controls>
+					<when value="CIEL:1065" thenDisplay="#xray-yes"/>
+				</controls>
+			</obs>
+		</p>
+		<ifMode mode="view" include="false">
+			<strong id="xray-yes">
+				Please fill in the X-ray Order form to order your x-rays
+			</strong>
 		</ifMode>
-
 	</fieldset>
 
 	<fieldset field-separator=", ">
 
 		<legend>Ultrasound order</legend>
 		<h3>Ultrasound order</h3>
-
-		<repeat>
-			<template>
-				<p id="{n}-toggleContainer" templateBlockId="ultrasound" class="toggleContainer" style="display:none;" >
-					<obs id="{n}" conceptId="LFHC:1009" answerConceptIds="CIEL:845, CIEL:161274, CIEL:161275, CIEL:161276, CIEL:161277, CIEL:161279, CIEL:161280, CIEL:161283, CIEL:161285, CIEL:161288"/>
-					<i class="addEntry icon-">&#xf055; Add</i>
-					<i class="removeEntry icon-">   &#xf056; Remove</i>
-				</p>
-			</template>
-			<render n="301"/>
-			<render n="302"/>
-			<render n="303"/>
-			<render n="304"/>
-			<render n="305"/>
-			<render n="306"/>
-			<render n="307"/>
-			<render n="308"/>
-			<render n="309"/>
-
-		</repeat>
-
-		<ifMode mode="VIEW" include="false">
-			<br/>
-			<p>
-				<strong>
-					Please also fill in the Ultrasound Order form to order your ultrasounds
-				</strong>
-			</p>
+		<p>
+			<obs id="ultrasound" conceptId="LFHC:1285" >
+				<controls>
+					<when value="CIEL:1065" thenDisplay="#ultrasound-yes"/>
+				</controls>
+			</obs>
+		</p>
+		<ifMode mode="view" include="false">
+			<strong id="ultrasound-yes" >
+				Please fill in the Ultrasound Order form to order your ultrasounds
+			</strong>
 		</ifMode>
 	</fieldset>
 
