LFHCDESK-133: Replace 'Serum Calcium' CIEL concept by an LFHC one (SI) 	modified:   omod/src/main/webapp/resources/htmlforms/lab-test-order.html

--- a/omod/src/main/webapp/resources/htmlforms/lab-test-order.html
+++ b/omod/src/main/webapp/resources/htmlforms/lab-test-order.html
@@ -339,7 +339,7 @@ formDisplayStyle="Simple"
 			<render n="401" m="CIEL:162101" u="false" />
 			<render n="402" m="LFHC:1442" u="false" />
 			<render n="403" m="LFHC:1441" u="false" />
-			<render n="404" m="LFH:1431" u="false" />
+			<render n="404" m="LFHC:1431" u="false" />
 			<render n="405" m="LFHC:1440" u="false" />
 			<render n="406" m="CIEL:1875" u="false" />
 			<render n="407" m="CIEL:162096" u="false" />
@@ -549,7 +549,7 @@ formDisplayStyle="Simple"
 			</template>
 			<render n="800" m="LFHC:1426" u="true"/>
 			<render n="801" m="LFHC:1416" u="true"/>
-			<render n="802" m="CIEL:159497" u="true"/>
+			<render n="802" m="LFHC:1417" u="true"/>
 			<render n="803" m="LFHC:1194" u="true"/>
 		</repeat>
 	</fieldset>
