LFHCDESK-133: Few more changes following comments 	modified:   omod/src/main/webapp/resources/htmlforms/lab-test-order.html

--- a/omod/src/main/webapp/resources/htmlforms/lab-test-order.html
+++ b/omod/src/main/webapp/resources/htmlforms/lab-test-order.html
@@ -297,10 +297,10 @@ formDisplayStyle="Simple"
 			</template>
 			<render n="301" m="CIEL:32" u="false" />
 			<render n="302" m="CIEL:300" u="false" />
-			<render n="302" m="CIEL:161421" u="false" />
+			<render n="303" m="CIEL:161421" u="false" />
 		</repeat>
 	</fieldset>
-	<fieldset id="oh-fieldset">
+	<fieldset id="ru-fieldset">
 		<!-- Routine Urinalysis -->
 		<legend><uimessage code="lfhcforms.labtestorder.legend.routineurinalysis"/></legend>
 		<h3><uimessage code="lfhcforms.labtestorder.legend.routineurinalysis"/></h3>
@@ -339,7 +339,7 @@ formDisplayStyle="Simple"
 			<render n="401" m="CIEL:162101" u="false" />
 			<render n="402" m="LFHC:1442" u="false" />
 			<render n="403" m="LFHC:1441" u="false" />
-			<render n="404" m="LFHC:1431" u="false" />
+			<render n="404" m="CIEL:161442" u="false" />
 			<render n="405" m="LFHC:1440" u="false" />
 			<render n="406" m="CIEL:1875" u="false" />
 			<render n="407" m="CIEL:162096" u="false" />
